<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" >


   <FrameLayout
       android:id="@+id/frame_content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_above="@+id/frameMenu"
       android:layout_alignParentTop="true">
   </FrameLayout>

    <FrameLayout
        android:id="@+id/frameMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_bar_height"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/skin_tabbar_bg"
            android:orientation="horizontal">

            <!--聊天-->
            <FrameLayout
                android:id="@+id/layout_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/menu_im_tv_margin"
                    android:src="@drawable/skin_tabbar_icon_chat_select"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/skin_tabbar_icon_chat"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu_txt_size"/>
            </FrameLayout>

            <!--好友-->
            <FrameLayout
                android:id="@+id/layout_friend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/menu_im_tv_margin"
                    android:src="@drawable/skin_tabbar_icon_friend_select"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/skin_tabbar_icon_friend"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu_txt_size"/>
            </FrameLayout>

            <!-- 留白 -->
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </FrameLayout>

            <!--我-->
            <FrameLayout
                android:id="@+id/layout_space"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/menu_im_tv_margin"
                    android:src="@drawable/skin_tabbar_icon_play_select"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/skin_tabbar_icon_play"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu_txt_size"/>
            </FrameLayout>

            <!--我-->
            <FrameLayout
                android:id="@+id/layout_me"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="@dimen/menu_im_tv_margin"
                    android:src="@drawable/skin_tabbar_icon_me_select"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/skin_tabbar_icon_me"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/menu_txt_size"/>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>


    <ImageView
        android:id="@+id/toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/frameMenu"
        android:layout_centerInParent="true"
        android:src="@drawable/skin_tabbar_btn" />

    <!-- 中间按钮 -->

    <ImageView
        android:id="@+id/plus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/frameMenu"
        android:layout_centerInParent="true"
        android:src="@drawable/skin_tabbar_icon_select" />

</RelativeLayout>
